--- a/django_project/blog/templates/blog/support.html
+++ b/django_project/blog/templates/blog/support.html
@@ -1,4 +1,4 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1>Contact Us 087-234-1873</h1>
+    <h1>Contact Us Ta</h1>
 {% endblock content %}
