--- a/django_project/users/templates/users/profile.html
+++ b/django_project/users/templates/users/profile.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-    <h1>Contact Us 098-275-3733</h1>
+    <h1>{{ user.username }}</h1>
 {% endblock content %}
